@@ -1,3 +1,7 @@
+2003-01-31 Peter Bienstman  <Peter.Bienstman@rug.ac.be>
+
+	* slabmode.cpp: Make insensitive to whether E_wall is explicitly set.
+
 2003-01-17 Peter Bienstman  <Peter.Bienstman@rug.ac.be>
 
 	* slabdisp.cpp: Better criterion for scaling.
